--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -59,7 +59,7 @@
 	box-shadow: 1px 1px 2px #E7E7E7;
     background: linear-gradient(to bottom, silver, yellow);
 }
-.pulldown-label > span {
+.popup-checklist > span {
     z-index:1;
     position:absolute;
     top:0;
@@ -69,6 +69,6 @@
     cursor:pointer;
     background: url(res/img/dropdown.png) no-repeat left top;
 }
-.pulldown-label > span:hover {
+.popup-checklist > span:hover {
     background: url(res/img/dropdown.png) no-repeat left -22px;
 }
