--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -1,6 +1,6 @@
 
 .dialog-BK {
-    z-index:1;
+    z-index:9991;
     position:fixed;
     display:none;
     top:0;
@@ -17,7 +17,7 @@
 .checklist-dialog {
     position: absolute;
     display:block;
-    padding:0 10px;
+    padding:5px 10px 0 10px;
     overflow: hidden;
     margin-right: auto;
     border:2px solid black;
@@ -40,14 +40,22 @@
 .checklist-dialog ul.col7 { column-count: 7; }
 .checklist-dialog ul.col8 { column-count: 8; }
 .checklist-dialog ul.col9 { column-count: 9; }
-.checklist-dialog input.multi-check { margin-right:2px; }	/* 見た目の調整 */
+/* 見た目の調整 */
+.checklist-dialog input.multi-check { margin-right:2px; }
+.checklist-dialog hr { margin:5px; }
 
-.checklist-dialog .buttonBar {
-    text-align:right;
-    width:100%;
-    height:auto;
+/* Dialogタイトルバー */
+.checklist-dialog .titleBar {
+	width:100%;
+	overflow: hidden;
 	border-bottom:1px solid black;
-	margin:5px 15px 5px 0;
+	margin-bottom: 5px;
+}
+.checklist-dialog .buttonBar {
+	position:absolute;
+	right:0;
+    text-align:right;
+	background-color: white;
 }
 .checklist-dialog .wbutton {
 	display:block;
@@ -59,16 +67,24 @@
 	box-shadow: 1px 1px 2px #E7E7E7;
     background: linear-gradient(to bottom, silver, yellow);
 }
+.popup-checklist {
+	width:100%;
+	height:19px;
+	padding:0 5px;
+	text-align: left;
+	background-color: silver;
+	border:1px solid black;
+}
 .popup-checklist > span {
     z-index:1;
     position:absolute;
     top:0;
-    right: 5px;
+    right: 0px;
     width:16px;
-    height:22px;
+    height:18px;
     cursor:pointer;
-    background: url(res/img/dropdown.png) no-repeat left top;
+    background: url(res/img/drop_arrow.png) no-repeat right top;
 }
 .popup-checklist > span:hover {
-    background: url(res/img/dropdown.png) no-repeat left -22px;
+    background: url(res/img/drop_arrow.png) no-repeat right -18px;
 }
