--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -3,7 +3,7 @@
 バルーンヘルプ表示CSS
 */
 .baloon-BK,.popup-BK {
-    z-index:10;
+    z-index:100;
     display:none;
     position:fixed;
     top:0;
@@ -11,9 +11,7 @@
     width:100%;
 	height:100%;/*for old Safari*/
     height:100vh;
-}
-.popup-BK {
-    z-index:1;
+	cursor: default;
 }
 .baloon-BK:not(:target) {height:100%\9} /* IE9,10 */
 /*    ポップアップ吹き出し */
@@ -104,7 +102,7 @@
     ポップアップボックス
 */
 .popup-box {
-    z-index:2;
+    z-index:99;
     position:fixed;
     display:none;
     padding:10px;
@@ -181,14 +179,10 @@
     margin-bottom:5px;
 }
 .popup-box .custom-button {
-	position:absolute;
 	display:flex;
-	bottom:5px;
 	width:95%;
 	padding-top:5px;
 	border-top:1px dotted silver;
-//	text-align: center;	// リソース内ではC++風コメントが使える、VSCodeのLintを除外しないとエラーに見える
-//	align-items: center;
     justify-content: center;
 }
 .popup-box .custom-button > .button {
