--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -5,12 +5,15 @@
     position: relative;
     margin: 0;
     padding: 0;    
+	box-sizing: border-box;
 }
 html, body {
-    height: 100%;
-    min-height: 100%;
+    height: 100vh;
+    min-height: 100vh;
     font-size:10pt;
+	overflow: hidden;
 }
+
 .appWindow {
     position:fixed;
     width: 100%;
@@ -21,9 +24,6 @@ html, body {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-}
-.appWindow * {
-	box-sizing: border-box;
 }
 .icon {
     margin: 0 2px;
