--- a/Core/Template/res/css/markdown.css
+++ b/Core/Template/res/css/markdown.css
@@ -101,11 +101,11 @@
 /*
 	checkbox mark
 */
-.easy_markdown .checkbox-on:before {
+.checkbox-on:before {
     content: url(res/img/checkbox-on.png);
 	vertical-align: middle;
 }
-.easy_markdown .checkbox-off:before {
+.checkbox-off:before {
     content: url(res/img/checkbox-off.png);
 	vertical-align: middle;
 }
