--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -77,3 +77,22 @@ html, body {
 option.disable {
 	color:silver;
 }
+/* コンボボックススタイル */
+.combobox  {
+	height:1.75em;
+	padding:0;
+}
+.combobox select {
+	width:100%;
+	height:100%;
+	border:1px solid black;
+}
+.combobox input {
+	position:absolute;
+	top:3px;
+	left:3px;
+	bottom:3px;
+	border:none;
+	/* height:1.25em;
+	margin:2px; */
+}
