--- a/Core/Template/res/css/slide-panel.css
+++ b/Core/Template/res/css/slide-panel.css
@@ -36,15 +36,17 @@ padding-top:1.6em;
 /* タブコンテンツ */
 .slide-panel>ul.slide-contents {
 	clear: both;
-width:100%;
-height:100%;
+	position:absolute;
+top:0;
+left:0;
+	width:100%;
+	height:100%;
 	list-style: none;
 	border: 1px solid gray;
 	overflow: hidden;
-padding:10px;
 }
-.slide-panel>ul.slide-contents>li {padding:0; display:none; }
-.slide-panel>ul.slide-contents>li.selected {padding:0; display:block; }
+.slide-panel>ul.slide-contents>li {padding:2px 0 0 5px; display:none; }
+.slide-panel>ul.slide-contents>li.selected {display:block; }
 
 /* 閉じるための外領域 */
 .slideBK {
