--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -181,7 +181,7 @@
 .popup-box .custom-button {
 	display:flex;
 	width:95%;
-	padding-top:5px;
+	padding-top:2px;
 	border-top:1px dotted silver;
     justify-content: center;
 }
@@ -267,7 +267,7 @@
     position:absolute;
     width:100%;
     height:1.2em;
-    bottom:0;
+    bottom:1.0em;
     text-align: center;
     padding: 15px 5px;
     margin:auto;
