--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -17,10 +17,8 @@
 .checklist-dialog {
     position: absolute;
     display:block;
-    padding:5px 10px 0 10px;
     overflow: hidden;
-    margin-right: auto;
-    border:2px solid black;
+    border:2px solid gray;
     border-radius: 5px;
     background-color:white;
 	box-shadow: 1px 1px 2px gray;
@@ -32,7 +30,7 @@
 	margin:0;
 }
 .checklist-dialog .checklist-tabs>li {
-	border:1px solid black;
+	border:1px solid gray;
 	padding:0 20px;
 	border-radius: 5px 5px 0 0;
 	cursor: pointer;
@@ -45,7 +43,10 @@
 .checklist-dialog .checklist-contents {
 	clear:both;
 	list-style: none;
-	border:1px dotted gray;
+	padding-left: 1em;
+	padding-right: 1em;
+	overflow: auto;
+	/* border:1px dotted gray; */
 }
 .checklist-dialog .checklist-contents>li {padding:0;display:none;}
 .checklist-dialog .checklist-contents>li.selected {display:block;}
@@ -55,7 +56,7 @@
 	left:0;
 	display:block;
 	list-style: none;
-	margin-bottom:10px;
+	/* margin-bottom:10px; */
 }
 .checklist-dialog ul.col2 { column-count: 2; }
 .checklist-dialog ul.col3 { column-count: 3; }
@@ -72,44 +73,68 @@
 /* Dialogタイトルバー */
 .checklist-dialog .titleBar {
 	width:100%;
+	font-size: 8pt;
 	overflow: hidden;
+	padding: 0 0.5em;
 	border-bottom:1px solid black;
 	margin-bottom: 5px;
+	color:white;
+    background: linear-gradient(blue,navy,blue );
 }
-.checklist-dialog .buttonBar {
-	position:absolute;
-	right:0;
+.checklist-dialog .checkBar {
+	float:right;
     text-align:right;
-	background-color: white;
+	color: cyan;
+	margin-left:10px;
+}
+.checklist-dialog > .bottom-bar {
+	font-size:8pt;
+	display: block;
+	width:100%;
+	height:2.2em;
+    background: linear-gradient(to bottom, whitesmoke,silver );
+	border-top: 1px dotted gray;
 }
 .checklist-dialog .wbutton {
-	display:block;
-	width:120%;
-	left:-10%;
+	position:absolute;
+	top:0;
+	right:0.8em;
 	text-align:center;
 	cursor:pointer;
-	padding:3px;
-	box-shadow: 1px 1px 2px #E7E7E7;
-    background: linear-gradient(to bottom, silver, yellow);
+	padding:1px 5px;
+	margin:2px;
+	border-radius: 5px;
+	box-shadow: 3px 2px 5px black;
+	color:white;
+    background: linear-gradient(navy,darkblue,navy );
 }
+.checklist-dialog .wbutton:active {
+	right:0.6em;
+	top:0.1em;
+	color:yellow;
+}
+/* チェックリスト用スタイル */
 .popup-checklist {
 	width:100%;
-	height:19px;
-	padding:0 5px;
 	text-align: left;
+	display: inline-flex;
+	flex-wrap: wrap;
+	white-space: nowrap;
+}
+.popup-checklist > label {
+	width:100%;
 	background-color: silver;
-	border:1px solid black;
+	border:1px solid gray;
 }
-.popup-checklist > span {
-    z-index:1;
-    position:absolute;
-    top:0;
+.popup-checklist span.dropdown {
+	position:absolute;
     right: 0px;
-    width:16px;
-    height:18px;
+    width:20px;
+    height:20px;
     cursor:pointer;
-    background: url(res/img/drop_arrow.png) no-repeat right top;
+    background: silver url(res/img/drop_arrow.png) no-repeat left top;
+	border-left:1px solid gray;
 }
-.popup-checklist > span:hover {
-    background: url(res/img/drop_arrow.png) no-repeat right -18px;
+.popup-checklist span.dropdown:hover {
+    background: whitesmoke url(res/img/drop_arrow.png) no-repeat left top;
 }
