--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -77,7 +77,7 @@
 	overflow: hidden;
 	padding: 0 0.5em;
 	border-bottom:1px solid black;
-	margin-bottom: 5px;
+	margin-bottom: 1px;
 	color:white;
     background: linear-gradient(blue,navy,blue );
 }
@@ -101,10 +101,10 @@
 	right:0.8em;
 	text-align:center;
 	cursor:pointer;
-	padding:1px 5px;
+	padding:1px 8px;
 	margin:2px;
 	border-radius: 5px;
-	box-shadow: 3px 2px 5px black;
+	box-shadow: 2px 2px 4px gray;
 	color:white;
     background: linear-gradient(navy,darkblue,navy );
 }
