--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -45,6 +45,7 @@ html, body {
 	color: #444;
 	text-align:center;
 	border-radius: 2px;
+	white-space: nowrap;
 /*	text-shadow: 0 -1px 1px #FFF, -1px 0 1px #FFF, 1px 0 1px #aaa; */
 	box-shadow: 1px 1px 2px #E7E7E7;
     background: linear-gradient(to bottom, white, silver);
