--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -27,7 +27,7 @@
 .checklist-dialog .checklist-tabs {
 	display:flex;
 	list-style:none;
-	margin:0;
+	/* margin-top:2px; */
 }
 .checklist-dialog .checklist-tabs>li {
 	border:1px solid gray;
@@ -47,7 +47,6 @@
 	padding-right: 1em;
 	overflow: auto;
 	padding-top:5px;
-	margin-bottom: 8px;
 	border-top: 1px dotted gray;
 }
 .checklist-dialog .checklist-contents>li {padding:0;display:none;}
@@ -58,7 +57,6 @@
 	left:0;
 	display:block;
 	list-style: none;
-	/* margin-bottom:10px; */
 }
 .checklist-dialog ul.col2 { column-count: 2; }
 .checklist-dialog ul.col3 { column-count: 3; }
@@ -79,7 +77,7 @@
 	overflow: hidden;
 	padding: 0 0.5em;
 	border-bottom:1px solid black;
-	margin-bottom: 1px;
+	margin-bottom: 2px;
 	color:white;
     background: linear-gradient(blue,navy,blue );
 }
@@ -96,6 +94,16 @@
 	height:2.2em;
     background: linear-gradient(to bottom, whitesmoke,silver );
 	border-top: 1px dotted gray;
+}
+/* 全てをチェックするcheckboxのスタイル */
+.checklist-dialog > .bottom-bar > label {
+	position: absolute;
+	bottom:2px;
+	left:5px;
+}
+/* チェックボックスの表示位置を揃える */
+.checklist-dialog > .bottom-bar > label > input {
+	vertical-align: middle;
 }
 .checklist-dialog .wbutton {
 	position:absolute;
