--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -27,26 +27,26 @@
 .checklist-dialog .checklist-tabs {
 	display:flex;
 	list-style:none;
-	/* margin-top:2px; */
 }
 .checklist-dialog .checklist-tabs>li {
-	border:1px solid gray;
+	width:100%;
 	padding:0 20px;
-	border-radius: 5px 5px 0 0;
 	cursor: pointer;
+	color: silver;
+	background-color: gray;
+	white-space: nowrap;
+	text-align: center;
 }
 .checklist-dialog .checklist-tabs>li.selected {
 	color: white;
-	background-color: gray;
+	background-color: navy;
 }
 /* tab-contents style */
 .checklist-dialog .checklist-contents {
 	clear:both;
 	list-style: none;
-	padding-left: 1em;
-	padding-right: 1em;
 	overflow: auto;
-	padding-top:5px;
+	padding:5px 1em;
 	border-top: 1px dotted gray;
 }
 .checklist-dialog .checklist-contents>li {padding:0;display:none;}
@@ -55,7 +55,6 @@
 .checklist-dialog ul {
 	top:0;
 	left:0;
-	display:block;
 	list-style: none;
 }
 .checklist-dialog ul.col2 { column-count: 2; }
@@ -76,10 +75,8 @@
 	font-size: 8pt;
 	overflow: hidden;
 	padding: 0 0.5em;
-	border-bottom:1px solid black;
-	margin-bottom: 2px;
 	color:white;
-    background: linear-gradient(blue,navy,blue );
+	background-color: navy;
 }
 .checklist-dialog .checkBar {
 	float:right;
@@ -89,16 +86,17 @@
 }
 .checklist-dialog > .bottom-bar {
 	font-size:8pt;
-	display: block;
+	display: flex;
 	width:100%;
-	height:2.2em;
+	padding:3px;
+	justify-content: center;
+	align-items: center;
     background: linear-gradient(to bottom, whitesmoke,silver );
 	border-top: 1px dotted gray;
 }
 /* 全てをチェックするcheckboxのスタイル */
 .checklist-dialog > .bottom-bar > label {
 	position: absolute;
-	bottom:2px;
 	left:5px;
 }
 /* チェックボックスの表示位置を揃える */
@@ -106,22 +104,18 @@
 	vertical-align: middle;
 }
 .checklist-dialog .wbutton {
-	position:absolute;
-	top:0;
-	right:0.8em;
 	text-align:center;
 	cursor:pointer;
-	padding:1px 8px;
-	margin:2px;
+	padding:2px 8px;
 	border-radius: 5px;
 	box-shadow: 2px 2px 4px gray;
 	color:white;
     background: linear-gradient(navy,darkblue,navy );
 }
 .checklist-dialog .wbutton:active {
-	right:0.6em;
-	top:0.1em;
 	color:yellow;
+	transform: translate(2px,1px);
+	border-bottom:none;
 }
 /* チェックリスト用スタイル */
 .popup-checklist {
