--- a/Core/Template/res/css/tabset.css
+++ b/Core/Template/res/css/tabset.css
@@ -11,7 +11,8 @@
 }
 .tabControll>.tabPanel {
     width:100%;
-    height:1.6em;
+    height:1.45em;
+	z-index: 1;
     border-bottom:1px solid gray;
     background-color:white;
 }
