--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -12,7 +12,7 @@
     -webkit-user-select: none;
     -ms-user-select: none;
 }
-.icon {
+.appicon {
     margin: 0 2px;
     cursor:pointer;
     box-shadow: 1px 1px 2px #000;
