--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -12,6 +12,8 @@
 	height:100%;/*for old Safari*/
     height:100vh;
 	cursor: default;
+/* background-color: black;
+opacity: 0.25; */
 }
 .baloon-BK:not(:target) {height:100%\9} /* IE9,10 */
 /*    ポップアップ吹き出し */
@@ -34,7 +36,7 @@
     content: "";
     position: absolute;
     top:-20px;
-    left:47%;
+    left:calc(50% - 8px);
     border: 8px solid transparent;
     border-bottom: 12px solid #999;
 }
@@ -42,7 +44,7 @@
     content: "";
     position: absolute;
     top:-17px;
-    left:47%;
+    left:calc(50% - 8px);
     border: 8px solid transparent;
     border-bottom: 12px solid lightyellow;
 }
@@ -131,11 +133,45 @@
     border-bottom: 13px solid transparent;
     border-right: 18px solid lightyellow;
 }
+/* 左フキダシ部分を作成 */
+.baloon-left:before {
+    content: "";
+    position: absolute;
+    top:calc(50% - 8px);
+    left:-20px;
+    border: 8px solid transparent;
+    border-right: 12px solid #999;
+}
+.baloon-left:after {
+    content: "";
+    position: absolute;
+    top:calc(50% - 8px);
+    left:-17px;
+    border: 8px solid transparent;
+    border-right: 12px solid lightyellow;
+}
+/* 右フキダシ部分を作成 */
+.baloon-right:before {
+    content: "";
+    position: absolute;
+    top:calc(50% - 8px);
+    right:-20px;
+    border: 8px solid transparent;
+    border-left: 12px solid #999;
+}
+.baloon-right:after {
+    content: "";
+    position: absolute;
+    top:calc(50% - 8px);
+    right:-17px;
+    border: 8px solid transparent;
+    border-left: 12px solid lightyellow;
+}
 /*==============================================================================
     ポップアップボックス
 */
 .popup-box {
-    z-index:99;
+    z-index:999;
     position:fixed;
     display:none;
     padding:10px;
