--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -265,7 +265,7 @@ opacity: 0.25; */
 	display:inline-block;
     width:18px;
     height:19px;
-    background: url(res/img/round-help.png) no-repeat left bottom;
+    background: url(res/img/help-icon.png) no-repeat left bottom;
 }
 /*==============================================================================
 インフォボックス
