--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -134,6 +134,14 @@
 	background-color: silver;
 	border:1px solid gray;
 }
+.popup-checklist span.dropdown:after {
+	position:relative;
+	top:0.5em;
+    right: 7px;
+	border:5px solid transparent;
+	border-top:8px solid gray;
+	content:"";
+}
 .popup-checklist span.dropdown {
 	position:absolute;
     right: 0px;
