--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -366,3 +366,159 @@ opacity: 0.25; */
 	background: #aaa;  
 	padding: 6px 10px 4px;  
 }
+/*==============================================================================
+    ポップアップナビメニュー
+*/
+.navi-menubox {
+    position:fixed;
+    display:none;
+    z-index: 101;
+	font-size:10pt;
+}
+.navi-menubox ul>li {
+    list-style-type: none;
+    line-height: 30px;
+    width:15em;
+    margin-top:-1px;
+}
+/* サブメニューの幅 */
+.navi-menubox ul.navi-sub li {
+	width: 12em;
+}
+/* ラベル行は少し高さを抑える */
+.navi-menubox ul.navi-sub li.label {
+    line-height: 20px;
+    margin-left:1px;
+}
+.navi-menubox li>span {
+	border:1px solid gray;
+    background: linear-gradient(to bottom, gray,black );
+    display: block;
+    color:white;
+    text-align: center;
+    width: 100%;
+    height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.navi-menubox li ul.navi-sub {
+    z-index:1;
+    display:none;
+    left:100%;
+    position:absolute;
+    margin-left:-1px;
+	margin-top:-30px;
+}
+.navi-menubox li:hover > ul.navi-sub {
+    display:flex;
+}
+.navi-menubox li a {
+	border:1px solid gray;
+    background: whitesmoke;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    cursor:pointer;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.navi-menubox ul.navi-menu>li>a {
+	color:black;
+    background: linear-gradient(to bottom,whitesmoke, silver );
+}
+.navi-menubox li a:hover {
+    background: yellow;
+    color:black;
+}
+/*リストに「▼」を付ける*/
+.navi-menubox li a.label:after {
+    position: absolute;
+    right: 0px;
+    margin-top: 1rem;
+    border: 6px solid transparent;
+    border-left: 6px solid gray;
+    content: "";
+    transform: translateY(-50%);
+}
+.dropdown-arrow:after {
+	position:relative;
+	top:0.5em;
+	right:7px;
+	border: 5px solid transparent;
+	border-top: 8px solid gray;
+	content: "";
+}
+/*==============================================================================
+    ポップアップナビメニュー
+*/
+.navi-checklist {
+    position:fixed;
+    display:none;
+    z-index: 101;
+	font-size:10pt;
+	background-color:white;
+	box-shadow: 1px 1px 2px gray;
+	border:2px solid black;
+	border-radius:5px;
+}
+.navi-checklist li {
+	list-style-type: none;
+}
+/* checklist tabset */
+.navi-checklist .tabmenu {
+	display:flex;
+	list-style:none;
+	width:100%;
+	border-radius:5px 5px 0 0;
+	overflow:hidden;
+}
+.navi-checklist .tabmenu>li {
+	width:100%;
+	padding:2px 20px;
+	cursor: pointer;
+	color: gray;
+	background-color: silver;
+	white-space: nowrap;
+	text-align: center;
+	border-left: 1px dotted gray;
+	border-right: 1px dotted gray;
+}
+.navi-checklist .tabmenu>li.selected {
+	color: black;
+	font-weight: bold;
+	background-color: whitesmoke;
+}
+/* .navi-checklist .tabcontents {
+	margin:5px 10px;
+} */
+.navi-checklist .tabcontents>li {
+	display:none;
+}
+.navi-checklist .tabcontents>li.selected {
+	display:block;
+}
+.navi-checklist .check-all {
+	padding:0 10px;
+	border-top:1px dashed gray;
+	text-align:right;
+}
+.navi-checklist .col2 { column-count: 2; }
+.navi-checklist .col3 { column-count: 3; }
+.navi-checklist .col4 { column-count: 4; }
+.navi-checklist .col5 { column-count: 5; }
+.navi-checklist .col6 { column-count: 6; }
+.navi-checklist .col7 { column-count: 7; }
+.navi-checklist .col8 { column-count: 8; }
+.navi-checklist .col9 { column-count: 9; }
+
+.navi-checklist .check-itemset {
+	padding:5px 10px;
+}
+.navi-checklist .check-itemset > div { bre0ak-inside: avoid; }
+
+.navi-checklist input,
+.navi-checklist select{
+	vertical-align:middle;
+}
